--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 
   /* Customize the scrollbar track */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 5px !important;
 }
 
 /* Customize the scrollbar thumb */
